Fix jump to links on partners page

--- a/_sass/_partners.scss
+++ b/_sass/_partners.scss
@@ -5,6 +5,6 @@
   li {
     display: inline-block;
     text-align: center;
-    width: 50%;
+    width: 49%;
   }
 }
